<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>dat3m</artifactId>
    <groupId>com.dat3m</groupId>
    <version>2.0.6</version>
  </parent>

  <groupId>com.dat3m.ui</groupId>
  <artifactId>ui</artifactId>
  <packaging>jar</packaging>
  
  <name>ui</name>

  <dependencies>
    <dependency>
    	<groupId>com.dat3m.porthos</groupId>
    	<artifactId>porthos</artifactId>
    	<version>2.0.6</version>
    </dependency>
    <dependency>
	    <groupId>guru.nidi</groupId>
    	<artifactId>graphviz-java</artifactId>
    	<version>0.8.3</version>
	</dependency>
	<dependency>
    	<groupId>ch.qos.logback</groupId>
    	<artifactId>logback-classic</artifactId>
    	<version>1.2.3</version>
	</dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <forkMode>once</forkMode>
          <argLine>-Djava.library.path=${project.parent.basedir}/lib</argLine>
          <environmentVariables>
            <LD_LIBRARY_PATH>${project.parent.basedir}/lib/</LD_LIBRARY_PATH>
            <DYLD_LIBRARY_PATH>${project.parent.basedir}/lib/</DYLD_LIBRARY_PATH>
          </environmentVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>com.dat3m.ui.Dat3M</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
          </execution>
        </executions>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>10</source>
                <target>10</target>
            </configuration>
        </plugin>
    </plugins>
  </build>
</project>
